--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 25%;
+  border-radius: 52%;
 }
 
 .projDisplay img {
@@ -157,7 +158,6 @@ body {
 
 .profile-pic{
   display: grid;
-
 }
 
 #evil-twin,
@@ -167,5 +167,4 @@ body {
   display: grid;
   justify-content: center;
   align-items: center;
-
 }
